// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adyen component authorize function handle create payment request decisions other than accept 1`] = `
Object {
  "error": true,
}
`;

exports[`adyen component authorize function handle the create payment request decision accept 1`] = `
Object {
  "authorized": true,
  "error": false,
}
`;

exports[`adyen component authorize function handle the create payment request result 3DS 1`] = `
Object {
  "authorized": true,
  "authorized3d": true,
  "orderNo": "15",
  "paymentInstrument": Object {
    "custom": Object {
      "adyenPaymentData": undefined,
    },
    "paymentTransaction": Object {
      "paymentProcessor": "mockedPaymentProcessor",
    },
    "setCreditCardExpirationMonth": [MockFunction],
    "setCreditCardExpirationYear": [MockFunction],
    "setCreditCardNumber": [MockFunction],
    "setCreditCardToken": [MockFunction],
    "setCreditCardType": [MockFunction],
  },
  "redirectObject": Object {
    "data": Object {
      "MD": "mockedMD",
    },
  },
  "signature": null,
}
`;

exports[`adyen component authorize function handle the create payment request result 3DS2 1`] = `
Object {
  "resultCode": "mockedresultCode",
  "threeDS2": "mockedthreeDS2",
  "token3ds2": "mockedtoken3ds2",
}
`;

exports[`adyen component authorize function handle the create payment request result redirectShopper 1`] = `
Object {
  "authorized": true,
  "authorized3d": false,
  "orderNo": "15",
  "paymentInstrument": Object {
    "custom": Object {
      "adyenPaymentData": "mockedpaymentData",
    },
    "paymentTransaction": Object {
      "paymentProcessor": "mockedPaymentProcessor",
    },
    "setCreditCardExpirationMonth": [MockFunction],
    "setCreditCardExpirationYear": [MockFunction],
    "setCreditCardNumber": [MockFunction],
    "setCreditCardToken": [MockFunction],
    "setCreditCardType": [MockFunction],
  },
  "redirectObject": Object {
    "url": "mockedURL",
  },
  "signature": "mockedURL",
}
`;

exports[`adyen component authorize function return with appropriate mesages when create payment request fails 1`] = `
Object {
  "authorized": false,
  "error": true,
  "fieldErrors": Array [],
  "serverErrors": Array [
    "mocked_error.payment.processor.not.supported",
  ],
}
`;
